05-config/prd/nginx-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy

spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: front
      app.kubernetes.io/instance: front
  template:
    metadata:
      name: nginx
      labels:
        app.kubernetes.io/name: front
        app.kubernetes.io/instance: front
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
              protocol: TCP
