05-config/prd/nginx-test.yml
apiVersion: v1
kind: Pod
metadata:
  namespace: test-ns
  name: nginx-test
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
