05-config/prd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: said-ingress
    annotations:
        nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
    ingressClassName: nginx
    rules:
        - host: said.check-consulting.net
          http:
              paths:
                  - pathType: Prefix
                    path: /
                    backend:
                        service:
                            name: nginx-service
                            port:
                                number: 80
    tls:
        - hosts:
              - said.check-consulting.net
          secretName: said.check-consulting.net.tls
